--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="login.htm" class="btn login-btn">Login</a>
             <a href="registration.html" class="btn register-btn">Register</a>
             <a href="admin.html" class="btn admin-btn">Admin</a>
-             <a href="userdash.html" class="btn dashboard-btn" id="dashboard-btn">
+             <a href="newdash.html" class="btn dashboard-btn" id="dashboard-btn">
                 <i class="fas fa-tachometer-alt"></i> Dashboard
               
         </div>
