--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <!-- Login & Register & Admin Buttons -->
         <div class="auth-buttons">
-            <a href="login.htm" class="btn login-btn">Login</a>
+            <a href="login.html" class="btn login-btn">Login</a>
             <a href="registration.html" class="btn register-btn">Register</a>
             <a href="admin.html" class="btn admin-btn">Admin</a>
              <a href="newdash.html" class="btn dashboard-btn" id="dashboard-btn">
